# geospatial-data-analysis

./: .gitignore  LICENSE  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: sample_lapd.csv  sample_nypd.csv
docs/: Project-Plan.md  density-crime-analysis-presentation.pptx
notebooks/: report.ipynb
scripts/: create_samples.py
src/: data_processing.py  io.py  standardize.py  visualization.py
tests/: test_processing.py
