[project]
name = "density-crime-analysis"
version = "0.1.0"
description = "Comparative analysis of NYPD and LAPD arrest patterns (2010-2019)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"pandas>=2.0",
	"numpy>=1.25",
	"scipy>=1.16.3",
	"tabulate>=0.9.0",
]

[project.optional-dependencies]
# Visualization and interactive demo dependencies
viz = [
	"matplotlib>=3.7",
	"seaborn>=0.13",
	"contextily>=1.3",
	"plotly>=5.15",
	"streamlit>=1.20",
	"folium>=0.16",
]

# Geospatial dependencies
geo = [
	"geopandas>=0.13",
	"contextily>=1.2",
]

# Development & testing
dev = [
	"pytest>=7.2",
	"ruff>=0.1.0",
	"mypy>=1.10",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_configs = true
